--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -1,17 +1,12 @@
 /**
  * Created by val on 9/25/16.
  */
-body {
-  margin: 0 0 0 0;
-  text-align: center;
-  font-family: Verdana, Arial;
-}
 
+/* Header */
 .header {
   position: relative;
   color: #fff;
   background-color: #4F5D73;
-  width: 1600px;
   height: 80px;
 }
 
@@ -26,24 +21,45 @@ body {
 }
 
 .header .header-title {
-  position: absolute;
-  top: 21px;
-  left: 260px;
-  background-image: url('../../assets/images/logo_head.png');
-  background-repeat: no-repeat;
-  background-size: auto 36px;
   display: block;
-  width: 240px;
+  background-size: auto 36px;
+  background: url('../../assets/images/logo_head.png') no-repeat;
+  top: 21px;
   height: 36px;
-  text-indent: -9999px;
-  overflow: hidden;
+  width: 240px;
 }
 
+/* Cover */
 .cover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #4393b9;
   border: 8px solid white;
   color: white;
-  margin: 0px 250px 0px 250px;
+  margin: 0 5% 0 5%;
   font-weight: 600;
   font-size: 120%;
+}
+
+/* List settings */
+.list {
+  display: flex;
+  border: 8px solid white;
+  margin: 0 5% 0 5%;
+  overflow-x: auto;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  /*padding: 5px;*/
 }
