--- a/client/app/app.css
+++ b/client/app/app.css
@@ -3,12 +3,13 @@
  */
 
 body {
+  font-family: Verdana, Arial, serif;
   margin: 0 0 0 0;
   text-align: center;
-  font-family: Verdana, Arial;
 }
 
 /* inject:css */
 @import 'app.css';
+@import 'components/status-menu/sm.css';
 @import 'main/main.css';
 /* end inject */
