feat(main): Add clicking on status-menu

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -43,6 +43,28 @@
   margin: 0 5% 0 5%;
 }
 
+/* Status menu */
+.status-menu {
+  align-items: center;
+  border: 8px solid white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 0 5% 0 5%;
+}
+
+.status {
+  color: #ADADAD;
+  font-size: large;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.status:hover {
+  border-bottom: 4px solid #4393B9;
+}
+
+
 /* List settings */
 .list {
   border: 8px solid white;
