--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -4,7 +4,7 @@
 
 /* Header */
 .header {
-  background-color: #4F5D73;
+  background-color: #4393B9;
   color: #fff;
   height: 80px;
   position: relative;
@@ -27,6 +27,69 @@
   height: 36px;
   top: 21px;
   width: 240px;
+}
+
+/* Sidemenu */
+.side-menu {
+  border: white 1px solid;
+  display: block;
+  position: fixed;
+  top: 20%;
+  width: 50px;
+}
+
+.side-menu .menu-item {
+  background-color: white;
+  border: black 1px solid;
+  display: block;
+  height: 50px;
+  margin-bottom: 5px;
+  opacity: 1;
+  position: relative;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+  width: 50px;
+}
+
+.side-menu .menu-item .text {
+  color: white;
+  display: inline-block;
+  font-family: sans-serif;
+  font-size: 1.4em;
+  left: 50px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  text-align: center;
+  top: 14px;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 0;
+}
+
+.side-menu .menu-item:hover .text {
+  opacity: 1;
+  width: 94px;
+}
+
+.side-menu .menu-item:hover {
+  background-color: #4393B9;
+  color: white;
+  cursor: auto;
+  display: block;
+  height: 50px;
+  opacity: 1;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+  width: 145px;
 }
 
 /* Cover */
@@ -94,6 +157,7 @@ th, td {
 td {
   color: #1d439b;
 }
+
 td.index {
   color: black;
 }
