--- a/client/app/app.css
+++ b/client/app/app.css
@@ -2,6 +2,20 @@
  * Created by val on 9/24/16.
  */
 
+/* General Styles */
+body {
+  background: url("../assets/images/bg.png") repeat-x fixed center top;
+  font-family: Verdana, Arial, serif;
+  font-size: 12px;
+  margin: 0 0 0 0;
+  text-align: center;
+}
+
+a {
+  color: #1d439b;
+  text-decoration: none;
+}
+
 /* inject:css */
 @import 'components/header/header.css';
 @import 'components/modal/modal.css';
