--- a/client/app/app.css
+++ b/client/app/app.css
@@ -21,5 +21,6 @@ a {
 @import 'components/header/header.css';
 @import 'components/modal/modal.css';
 @import 'components/sidemenu/sidemenu.css';
+@import 'components/statusmenu/statusmenu.css';
 @import 'main/main.css';
 /* end inject */
