--- a/client/app/components/statusmenu/statusmenu.css
+++ b/client/app/components/statusmenu/statusmenu.css
@@ -5,22 +5,24 @@
 /* Status menu */
 .status-menu {
   align-items: center;
-  border: 8px solid white;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   margin: 0 10% 0 10%;
+  padding: 10px 0 10px 0;
+  vertical-align: middle;
 }
 
 .status {
-  color: #ADADAD;
+  border-radius: 20px;
+  color: whitesmoke;
   cursor: pointer;
   font-size: large;
-  font-weight: 400;
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 .active {
-  color: #787878;
+  background-color: #187CE5;
+  color: white;
   font-weight: bold;
 }
