--- a/client/app/components/cover/cover.css
+++ b/client/app/components/cover/cover.css
@@ -5,8 +5,7 @@
 /* Cover */
 .cover {
   align-items: center;
-  background-color: #4393b9;
-  border: 8px solid white;
+  background-color: #3e94ec;
   color: white;
   display: flex;
   flex-direction: column;
