--- a/client/app/components/sidemenu/sidemenu.css
+++ b/client/app/components/sidemenu/sidemenu.css
@@ -4,8 +4,8 @@
 
 /* Sidemenu */
 .side-menu {
-  border: white 1px solid;
   display: block;
+  padding-left: 10px;
   position: fixed;
   top: 20%;
   width: 50px;
@@ -13,7 +13,6 @@
 
 .side-menu .menu-item {
   background-color: white;
-  border: black 1px solid;
   display: block;
   height: 50px;
   margin-bottom: 5px;
@@ -49,8 +48,9 @@
   width: 94px;
 }
 
+/* TODO: При ширине уже в 1440px начинает заезжать на элементы */
 .side-menu .menu-item:hover {
-  background-color: #48a3c8;
+  background-color: #3e94ec;
   color: white;
   cursor: auto;
   display: block;
