--- a/client/app/app.css
+++ b/client/app/app.css
@@ -17,10 +17,10 @@ a {
 }
 
 /* inject:css */
-@import 'components/cover/cover.css';
-@import 'components/header/header.css';
-@import 'components/modal/modal.css';
-@import 'components/sidemenu/sidemenu.css';
-@import 'components/statusmenu/statusmenu.css';
 @import 'main/main.css';
+@import '../components/cover/cover.css';
+@import '../components/header/header.css';
+@import '../components/modal/modal.css';
+@import '../components/sidemenu/sidemenu.css';
+@import '../components/statusmenu/statusmenu.css';
 /* end inject */
