--- a/client/app/components/cover/coverView.html
+++ b/client/app/components/cover/coverView.html
@@ -1,5 +1,5 @@
 <div class="cover">
   <h1>MyBookList</h1>
-  <img src="../../assets/images/booklet.png">
+  <img src="../../../assets/img/booklet.png">
   <p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
 </div>
