--- a/client/app/components/main/main.html
+++ b/client/app/components/main/main.html
@@ -20,7 +20,9 @@
         <td class="index">{{$index + 1}}</td>
         <td></td>
         <td class="title">{{book.title}}</td>
-        <td>{{book.author}}</td>
+        <td>
+          <a href="/api/authors/{{book.author.id}}">{{book.author.name}}</a>
+        </td>
         <td></td>
         <td>{{book.comment}}</td>
         <td>{{book.created}}</td>
