--- a/client/app/components/book/book.html
+++ b/client/app/components/book/book.html
@@ -12,7 +12,7 @@
         <th ng-click="sortBy('progress')">Progress</th>
         <th></th>
       </tr>
-      <tr ng-repeat="book in $ctrl.books | filter: {status: selectedStatus}">
+      <tr ng-repeat="book in books | filter: {status: $root.selectedStatus}">
         <td class="index">{{$index + 1}}</td>
         <td></td>
         <td class="title">{{book.title}}</td>
