--- a/client/app/components/statusmenu/statusmenu.html
+++ b/client/app/components/statusmenu/statusmenu.html
@@ -1,8 +1,8 @@
 <div class="status-menu">
-  <div class="status all-books" ng-class="{'active':selectedStatus === undefined}" ng-click="allBooks()">All Books</div>
-  <div class="status reading" ng-class="{'active':selectedStatus === 1}" ng-click="reading()">Currently Reading</div>
-  <div class="status completed" ng-class="{'active':selectedStatus === 2}" ng-click="completed()">Completed</div>
-  <div class="status on-hold" ng-class="{'active':selectedStatus === 3}" ng-click="onHold()">On Hold</div>
-  <div class="status dropped" ng-class="{'active':selectedStatus === 4}" ng-click="dropped()">Dropped</div>
-  <div class="status plan-to-watch" ng-class="{'active':selectedStatus === 5}" ng-click="planToWatch()">Plan to Read</div>
+  <div class="status all-books" ng-class="{'active':$root.selectedStatus === undefined}" ng-click="selectStatus()">All Books</div>
+  <div class="status reading" ng-class="{'active':$root.selectedStatus === 1}" ng-click="selectStatus(1)">Currently Reading</div>
+  <div class="status completed" ng-class="{'active':$root.selectedStatus === 2}" ng-click="selectStatus(2)">Completed</div>
+  <div class="status on-hold" ng-class="{'active':$root.selectedStatus === 3}" ng-click="selectStatus(3)">On Hold</div>
+  <div class="status dropped" ng-class="{'active':$root.selectedStatus === 4}" ng-click="selectStatus(4)">Dropped</div>
+  <div class="status plan-to-watch" ng-class="{'active':$root.selectedStatus === 5}" ng-click="selectStatus(5)">Plan to Read</div>
 </div>
